maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
	while(!estSurBiscuit())
  keepHandOnSideWall()
}

def keepHandOnSideWall(){
  if (estDosMur()){
  droite()
  avance()
    gauche()}
  else{
  recule()
    gauche()
  
}